<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="word_list">africa,agent,air,aisle,alien,alligator,amazon,angel,ankle,antarctica,applause,apple,application,aristocrat,arm,aunt,avocado,back,backbone,bag,baguette,balloon,banana,band,bank,bark,baseball,basketball,bat,battery,beach,beanstalk,bedbug,beer,beethoven,belt,berlin,berry,bib,bicycle,bike,billboard,bird,birthday,bite,blacksmith,blanket,bleach,blimp,blossom,blueprint,blur,boa,board,boat,bobsled,body,bomb,bond,bonnet,book,boom,booth,bow,bowtie,box,boy,brainstorm,brand,brave,bride,bridge,broccoli,broom,bruise,brunette,bubble,buddy,buffalo,bug,bulb,bunny,bus,buy,cabin,cafeteria,cake,calculator,campsite,can,canada,candle,candy,cape,capital,capitalism,car,cardboard,cat,ceiling,cell,center,century,chair,chalk,champion,charger,cheerleader,chef,chess,chew,chicken,chime,china,chocolate,church,circle,circus,clay,cliff,cloak,clockwork,clown,club,clue,coach,coal,coaster,cog,cold,college,comfort,compound,computer,cone,constrictor,conversation,cook,coop,copper,cord,corduroy,cot,cough,cow,cowboy,crash,crayon,cream,cricket,crisp,cross,crow,cruise,crumb,crust,cuff,curtain,czar,dad,dart,dawn,day,death,deep,defect,dent,dentist,desk,dice,dictionary,dimple,dinosaur,dirty,dismantle,ditch,diver,doctor,dog,doghouse,doll,dominoes,door,dot,drain,draw,dream,dress,drink,drip,drums,dryer,duck,dump,dunk,dust,dwarf,eagle,ear,eat,ebony,egypt,elbow,electricity,elephant,elevator,elf,elm,engine,england,escalator,eureka,europe,evolution,extension,eye,eyebrow,fair,fall,fan,fancy,fast,feast,fence,feudalism,fiddle,field,file,film,finger,fire,fish,flagpole,flannel,flashlight,flock,flower,flu,flush,flute,flutter,fly,fog,foil,football,forehead,forest,forever,fork,fortnight,france,freckle,freight,fringe,frog,frown,gallop,game,garbage,garden,gas,gasoline,gem,ghost,giant,ginger,gingerbread,girl,glass,glasses,glove,goblin,gold,grandpa,grape,grass,gratitude,gray,greece,green,guitar,gum,gumball,hair,half,ham,handle,handwriting,hang,happy,hat,hatch,head,headache,heart,hedge,helicopter,hem,hide,hill,himalaya,hockey,hole,homework,honk,hood,hook,hopscotch,horse,horseshoe,hose,hospital,hot,hotel,house,houseboat,hug,human,humidifier,hungry,hurdle,hurt,hut,ice,ice cream,implode,india,inn,inquisition,intern,internet,invitation,iron,ironic,ivory,ivy,jade,jam,japan,jeans,jelly,jet,jig,jog,journal,jump,jupiter,kangaroo,ketchup,key,kid,killer,kilogram,king,kitchen,kite,kiwi,knee,kneel,knife,knight,koala,lab,lace,ladder,ladybug,lag,landfill,lap,laser,laugh,laundry,law,lawn,lawnmower,lawyer,lead,leadlock,leak,leg,lemon,letter,level,lifestyle,ligament,light,lightsaber,lime,limousine,lion,lizard,log,loiterer,lollipop,loveseat,loyalty,lunch,lunchbox,lyrics,machine,macho,mailbox,mammoth,maple,march,mark,mars,mascot,mass,mast,matchstick,mate,mattress,mercury,mess,mexico,midsummer,millionaire,mine,mistake,model,modern,mold,mole,mom,monday,money,monitor,monster,moon,mop,moscow,moth,motorcycle,mountain,mouse,mouth,mower,mud,mug,music,mute,nature,needle,negotiate,neighbor,nest,net,neutron,new york,niece,night,nightmare,nose,note,novel,nurse,nut,oar,observatory,office,oil,old,olive,olympian,olympus,opaque,opener,opera,orange,orbit,organ,outer,outside,ovation,overture,pail,paint,pajamas,palace,pants,paper,park,parody,part,party,password,paste,pastry,pawn,pear,pen,pencil,pendulum,penis,penny,pepper,personal,philosopher,phoenix,phone,photograph,piano,picnic,pigpen,pillow,pilot,pinch,ping,pinwheel,pirate,plaid,plan,plank,plate,platypus,playground,plow,plumber,pocket,poem,point,pole,pomp,pong,pool,popsicle,population,port,portfolio,positive,post,press,princess,protestant,psychologist,publisher,punk,puppet,puppy,push,puzzle,quarantine,queen,quicksand,quiet,race,racket,radio,raft,rag,rainbow,rainwater,random,rat,ray,recycle,red,regret,revolution,rib,riddle,rim,rink,robin,robot,rock,roller,rome,room,root,rose,round,roundabout,row,ruler,rung,runt,rut,sad,safe,salmon,salt,sandbox,sandcastle,sandwich,sash,satellite,scar,scared,school,scoundrel,scramble,scuff,seashell,season,sentence,sequins,server,set,shadow,shaft,shallow,shampoo,shark,sheep,sheets,sheriff,shipwreck,shirt,shoelace,short,shot,shower,shrink,sick,siesta,silhouette,singer,sip,skate,skating,ski,slam,sleep,sling,slip,slow,slump,smith,sneeze,snow,snowman,snuggle,song,space,spare,speakers,spider,spike,spit,sponge,spool,spoon,spring,sprinkler,sprint,spy,square,squint,stadium,staff,stairs,standing,star,state,stick,stockholder,stoplight,stout,stove,stowaway,straw,stream,streamline,stripe,student,sub,sun,sunburn,sushi,swamp,swarm,sweater,swimming,swing,switch,talk,taxi,teacher,teapot,teenager,telephone,telescope,television,ten,tennis,thief,throne,through,thunder,tide,tiger,time,tinting,tiptoe,tiptop,tired,tissue,toast,toilet,tool,tooth,toothbrush,tornado,tournament,tower,tractor,train,trash,treasure,tree,triangle,trip,truck,tub,tuba,turkey,tutor,twang,twig,type,undertaker,unicorn,upgrade,vacuum,van,vest,vision,wake,wall,war,washer,washington,water,watermelon,wave,wax,wedding,weed,well,whale,wheelchair,whip,whiplash,whisk,whistle,white,wig,will,windmill,winter,wish,wolf,wool,world,worm,wristwatch,yard,yardstick,zamboni,zen,zero,zipper,zone,zoo</string>
    <string name="spotlight_description">\"In 1969 or 1970, I began to re-evaluate my whole concept of what I wanted my music to say,\" Marvin Gaye said. \"I was very much affected by letters my brother was sending me from Vietnam, as well as the social situation here at home. I realized that I had to put my own fantasies behind me if I wanted to write songs that would reach the souls of people. I wanted them to take a look at what was happening in the world.\" The masterpiece that followed Gaye\'s awakening revolutionized black music.</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="album">View Album</string>
    <string name="songs">Songs</string>
    <string name="album_spotlight">Album Spotlight</string>
</resources>